--- a/09_Uplift_marketing.Rmd
+++ b/09_Uplift_marketing.Rmd
@@ -16,22 +16,22 @@ On the other hand, making large-scale campaign is costly. Therefore it would be 
 
 Above we presented the common sense arguments but how science addresses a question: *"Is it true that by sending the marketing offer we only extend the chance for the customer to buy our product and therefore extend our profit?"*.
 
-The issue was already investigated [@book_uplift] and it was pointed out that customers of any company can be divided into 4 groups \@ref(fig:4groups). 
+The issue was already investigated [@book_uplift] and it was pointed out that customers of any company can be divided into 4 groups (Figure: \@ref(fig:4groups)). 
 
-```{r 4groups, echo=FALSE, fig.cap='Customer types taking into consideration their response to treatment', out.width = '50%', fig.align='center'}
+```{r 4groups, echo=FALSE, fig.cap='Customer types taking into consideration their response to treatment [@4groups_chart]', out.width = '50%', fig.align='center'}
 knitr::include_graphics("images/09_e45e2d97-confmatrix_alt.png")
 ```
 
-The image matrix was created based on the customer decision to buy a product depending on the fact that they were addressed by marketing campaign or not. The action used for trigggering in customer the particular behaviour is called treatment. In the 4 groups we distinghuish \@ref(fig:4groups) :
+The image matrix was created based on the customer decision to buy a product depending on the fact that they were addressed by marketing campaign or not. The action used for trigggering in customer the particular behaviour is called treatment. In the 4 groups we distinghuish (Figure: \@ref(fig:4groups)):
 
-  * the customers that irrespective of the fact that they experienced treatment or now that are going to buy a product *(these are called "sure things")*
-  * the customers that irrespective of the fact that they experienced treatment or now that are **NOT** going to buy a product *("lost causes")*
-  * the customers that without being exposed to marketing campaing would **NOT** buy a product *("persuadables")*
-  * the customers that without being exposed to marketing campaing would buy a product but in case thay receive a marketing offer they resign *("sleeping dogs")*
+  * ***"sure things"***: the customers that irrespective of the fact that they experienced treatment or now that are going to buy a product
+  * ***"lost causes"***: the customers that irrespective of the fact that they experienced treatment or now that are **NOT** going to buy a product 
+  * ***"persuadables"***: the customers that without being exposed to marketing campaing would **NOT** buy a product 
+  * ***"sleeping dogs"***: the customers that without being exposed to marketing campaing would buy a product but in case thay receive a marketing offer they resign 
 
 It can be than observed that in case of *"lost causes"* and *"sure things"* sending a marketing offer makes no impact therefore it doesn't make sense to spend money on targeting these customers. As the company we should however pay more attention to the groups *"persuadables"* and *"sleeping dogs"*. In case of the first bearing the costs of marketing campaign will bring benefit. In case of the latter we not only spend money on targeting them but as the result we will also discourage them from buying the product therefore we as a company loose two times. The case of sleeping dogs can seem irrealistic, therefore we present an example. 
 
-> *Let's imagine there is a customer that subscriped our paid newsletter. He forgot that he pays each month fixed fee. He would continue paying unless a company sends him a discount offer. At this moment the customer realises that he doesn;t need and offer and unsubscripes.*
+> *Let's imagine there is a customer that subscriped our paid newsletter. He forgot that he pays each month fixed fee. He would continue paying unless a company sends him a discount offer. At this moment the customer realises that he doesn't need the product and unsubscripes.*
 
 By understading the structure of the company's customers, it can target its offer more effectively.
 
@@ -43,15 +43,17 @@ In [@uplift_stanford] it was pointed out that the problem of deciding whether it
 Uplift modeling is a technique that helps to determine probability gain that the customer by getting the marketing materials will buy a product.
 The field is relatievely new. The two most commmon approaches are [@uplift_approaches]:
 
-  * Two Model
+  * **Two Model**
   
 In this method there are build two classifiers. The one is trained on observations that received treatment *(model_T1)* and the second is trained on observations that didn't receive a treatment *(model_T0)*. Later the uplift for particular observations is calculated. If the observation experienced treatment then it is an input to the *model_T1* and the probability that the customer will buy a product is calculated. Later the if condition is investigated meaning what would happen if the customer didn't receive a treatment. In Ssuch case  the treatment indicator in observation's feature is changed to "zero". Such modified record is an input to *model_T0* that predicts the probability that such customer will buy a product. The uplift is calculated as difference between output of the *model_T1* and *model_T0*. The higher the difference, the more profitable is addressing marketing campaign to particular customer.    
 
-  * One Model
+  * **One Model**
   
 The one model approach is similar conceptually to the Two model approach with such a difference that instead of building two classifiers only one is used. Therefore every observation is an input to the model that generates prediction. Later the indicator in the treatment column is changed into the negation and such vector is used as input to the model that once again output probability that the customer buy a product. The uplift is the difference of the two predicted probabilities. 
 
-[przydałoby się stworzyć jakąś prostą grafikę tutaj]
+```{r approches, echo=FALSE, fig.cap='Two Model vs One Model approach (own elaboration)', out.width = '100%', fig.align='center'}
+knitr::include_graphics("images/09_one_two_model.png")
+```
 
 As the uplift modeling is an emenrging field there isn't a list of good practices in terms of what classifier is better to use. 
 In [@uplift_svm], the autors investigated application of SVM. But due to the fact that SVM requires precise, long lasting finetuning we decided to use xgboost (the architecture of our solution is described in details in section Model).
@@ -65,15 +67,16 @@ We chose Kevin Hillstrom's dataset from E-Mail Analytics And Data Mining Challen
   * 1/3 were randomly chosen to receive an e-mail campaign featuring Womens merchandise
   * 1/3 were randomly chosen to not receive an e-mail campaign *("control group")*
   
-As an expected behaviour the following actions were determined: 
-* visit the company's website within 2 weeks after sending to the customers a marketing campaign
-* purchase a product from the website within 2 weeks after sending to the customers a marketing campaign
+As an expected behaviour the following actions were determined:   
+
+  * visit the company's website within 2 weeks after sending to the customers a marketing campaign  
+  * purchase a product from the website within 2 weeks after sending to the customers a marketing campaign  
 
 In the challenge the task was to determine whether the Mens or Womens e-mail campaign was successful. In our task we reformulated the task and we want to answer the question whether any e-mail campaign was profitable for the company.
 
-The features about customers in the dataset are specified in fig \@ref(fig:dataset):
+The features about customers in the dataset are specified in figure \@ref(fig:dataset):
 
-```{r dataset, echo=FALSE, fig.cap='Customer features in the dataset', out.width = '100%', fig.align='center'}
+```{r dataset, echo=FALSE, fig.cap='Customer features in the dataset (own elaboration)', out.width = '100%', fig.align='center'}
 knitr::include_graphics("images/09_xai_customer.jpg")
 ```
 
@@ -83,62 +86,78 @@ There is also information about customer activity in the two weeks following del
 * Conversion: 1/0 indicator, 1 = Customer purchased merchandise in the following two weeks.
 * Spend: Actual dollars spent in the following two weeks.
 
-[zwiększę potem czcionkę na grafice]
 
 ### Feature engineering
 
-It is largely imbalanced - there is only about 15% of positive cases in column Visit and x% in column Conversion.
+It is largely imbalanced - there is only about 15% of positive cases in column Visit and 9% in column Conversion.
 In such situation we decided to use column Visit as a label.
 As the number of column is small we decided to use one-hot encoding for transforming categorical variables instead of target encoding. 
 
-## Model [wymaga dopracowania]
-There is not many packages dedicated to uplift modeling in python. We investigated the two: pylift [@pylift] and pyuplift. The latter enables usage of 4 types of models - one of those is Two Model approach. In pylift package there is the TransformedOutcome class that generate predictions. However, the model itself is not well described and uses XGBRegressor unserneath that is not intuitive. Fortunately the package offer also the class UpliftEval that allow uplift metric visualization. 
+## Model
+There is not many packages dedicated to uplift modeling in python. We investigated the two: pylift [@pylift] and pyuplift \cite[]. The latter enables usage of 4 types of models - one of those is Two Model approach. In pylift package there is the TransformedOutcome class that generates predictions. However, the model itself is not well described and uses XGBRegressor underneath that is not intuitive. Fortunately the package offer also the class UpliftEval that allow uplift metric visualization. 
 In the scene, we decided to create our own classifier (as in the One-Model approach) and use UpliftEval class from pylift model for metric evaluation.
-As the classifier we used fine-tuned XGBoost. In the figure below we show the cumulative gain chart for train and test sets. 
+As the classifier we used fine-tuned XGBoost with the score function as area under the cumulative gain chart (described below). In the figure below we show the cumulative gain chart for train and test sets (Figure: \@ref(fig:upliftRES). 
 
 
 ```{r upliftRES, echo=FALSE, fig.cap='Cumulative gain chart: (left) train set, (right) test set', out.width = '50%', fig.align='default', fig.show="hold"}
 knitr::include_graphics("images/09_uplift_train.png")
 knitr::include_graphics("images/09_uplift_test.png")
 ```
-[DODAĆ ZDANIE JAK CZYTAĆ TEN WYKRES - JAK ON POWSTAJE]
+In order to evaluate performance of uplift models the Qini curve is not suggested as it is vulnerable to overfitting to the treatment label. Therefore the Cumulative gain chart is used. It is the most unbiased estimate of the uplift. In the package Pylift it is implemented based on the formula:
+$Cumulative\ gain(\phi) = (\frac {n_{t,1}(\phi)}{n_{t,1}}-\frac {n_{c,1}(\phi)}{n_{c,1}})(\frac{n_t(\phi)+n_c(\phi)}{N_t+N_c})$  
+where  
+$n_{t,1} (\phi)$ is the number of observations in the treatment group at cutoff level $\phi$ with label 1  
+$n_{c,1} (\phi)$ is the number of observations in the control group at cutoff level $\phi$ with label 1  
+$n_{t,1}$ is the total number of observations in the treatment group with label 1 (analogically $n_{c,1}$)  
+$N_t$ is the total number of observations in treatment group (analogically $N_c$)  
+
+The plot can be interpreted as follows: the customers are sorted in descending order based on predicted uplift. Later some friction of data is taken for the analisis (e.g. 10% of the people with the highest score). This cutoff is represented as $\phi$ in formula. Later for the subset it is verified the uplift gain. At the beginning of the curve the gain is the biggest as it refers to the persuadables group. Later the curve stabilizes as it depicts the groups: lost causes and sure things. At the end the curve decrease as there are sleeping dogs with negative uplift.
 
 It can be seen that our model is better than random choice but much worse than practical/theoretical maximum possible. It is also worse than the case without sleeping dogs.
-It is worth emphesising that our model didn't experience overfitting as its quality on train and test sets are similar.
-
-[napisać gdzieś że miara accuracy jest tu niewłaściwa i poprzeć to dowodem liczbowym]
+It is worth noticing that our model didn't experience overfitting as its quality on train and test sets are similar.
 
 
 ## Explanations [wymaga dopracowania]
-The model is already created and the metric show that it brings additional value.Here comes the question whether the model is reliable, does it make the decision based on the features that are important form expert knowledge perspective. Such judgement can be done based on results of XAI tools.
-We decided to investigate model interpretability from the perspective of the 4 customer groups @\ref(fig:4groups). Therefore we chose one representative customer from each group and analyse the model on instance-level. 
+The model is already created and the Cumulative Gain chart shows that it brings additional value. Here comes the question whether the model is reliable? Does it make the decision based on the features that are important from expert knowledge perspective? Such judgement can be done based on results of XAI tools.
+We decided to investigate model interpretability from individual perspective and Data Scientist perspective.
 
 ### Individual perspective
 
 In order to explain model output for particular customer we employed Shapley values [@shap]. We benefit from additive feature attribution property of shapley values to model the uplift:
 
-UPLIFT=P(PUCHASE|TREATMENT=1) - P(PURCHASE|TREATMENT=0)) --> 
-SHAP(P(PUCHASE|TREATMENT=1)) - SHAP(P(PUCHASE|TREATMENT=0)) = SHAP (UPLIFT)
+$uplift=P(purchase|\ treatment=1) - P(purchase|\ treatment=0))$  
+$SHAP(uplift)= SHAP(P(purchase|\ treatment=1)) - SHAP(P(purchase|\ treatment=0))$  
 
-This gives us great opportunity to evaluate these two vectors of Shapley values independently. For example if we use any tree-based model, we can make use of tree-based kernel for shapley value estimation (faster and better convergent) instead of modelling it directly as a black blox model returning difference between two regressors.
+This property gives us great opportunity to evaluate these two vectors of Shapley values independently. For example if we use any tree-based model, we can make use of tree-based kernel for shapley value estimation (faster and better convergent) instead of modeling it directly as a black blox model.
 
 Experimental results proved, that these two ways of calulcation are providing close estimations, with precision to numerical errors.
 
-Below we present Shapley values for the customer with the highest and the lowest uplift computed directly on uplift (without using its additivity) @\ref(fig:upliftSHAP).
+Before we move to investigation of Shapley values let's get to know customers that got the highest and the lowest uplift. In this section we will analyse reliability of predictions for these particular instances. In the table \@ref(tab:personalTABLE) there are all the informations provided to the system about the customers.
 
+```{r personalTABLE, echo=FALSE}
+tab=read.csv2("images/09_personal.info.csv", sep=',')
+knitr::kable(tab, caption='Customer with the highest and the lowest uplift - features' )
+```
+
+As it can be seen the customers spend almost the same amount of money during the last 12 months on our company's products.
+The person with the highest uplift did last shopping 2 months ago whereas the person with the lowest uplift did it 5 month ago. In the dataset there are people that purchased the product for the last time even 12 months ago so the person it not the most severe case in that sense. Apart from many other differences among the two customers the key is that the person with the highest uplift received treatment whereas the secind customer didn't.
+
+Below we present Shapley values for the customer desribed in \@ref(tab:personalTABLE). The values were computed directly on uplift (without using its additivity) \@ref(fig:upliftSHAP).
 ```{r upliftSHAP, echo=FALSE, fig.cap='Shapley values: (left) customer with the lowest uplift, (right) customer with the highest uplift', out.width = '50%', fig.align='default', fig.show="hold"}
 knitr::include_graphics("images/09_shap_min_uplift.png")
 knitr::include_graphics("images/09_shap_max_uplift.png")
 ```
 
-[DODAĆ WNIOSKI]
+Conclusions:  
+In 
 
 
-In a table @\ref(tab:upliftTABLE) there is a comparison of Shapley values obtained using two methods for the customer with the lowest uplift.
+In a table \@ref(tab:upliftTABLE) there is a comparison of Shapley values obtained using two methods for the customer with the lowest uplift.
 
-```{r upliftTABLE, echo=FALSE, tab.cap='Shapley values obtained using two methods', out.width = '50%', fig.align='default', fig.show="hold"}
-tab=read.csv2("images/uplift_table.csv")
-knitr::kable(tab)
+```{r upliftTABLE, echo=FALSE}
+tab=read.csv2("images/09_shap_diff.csv", sep=',')
+options(digits=4)
+knitr::kable(tab, caption = 'Shapley values obtained using two methods')
 ```
 
 Experimental results proved, that these two ways of calulcation are providing close estimations, with precision to numerical errors [TRZEBA NAPISAĆ TEŻ O WPŁYWIE LOSOWOŚCI - LOSUJEMY SUBSET]
@@ -186,3 +205,12 @@ Here add the most important conclusions related to the XAI analysis.
 What did you learn? 
 Where were the biggest difficulties?
 What else did you recommend?
+
+
+
+
+zdaje misie tez ze patrzac na sama kubelkowosc danych (tzn pomijajac hisotry ktore teraz sie wybilo bo mamy przetrenowany model zeby miec sleeping dogi xD) to po prostu musi tam byc wiele przypadkow o ktorych wiemy dokladnie to samo i maja rozne odpowiedzi
+
+
+the perspective of the 4 customer groups @\ref(fig:4groups). Therefore we chose one representative customer from each group and analyse the model on instance-level. 
+
