--- a/book.bib
+++ b/book.bib
@@ -534,7 +534,28 @@ url={https://tech.wayfair.com/data-science/2018/10/pylift-a-fast-python-package-
 urldate={15/04/2020}
 }
 
-
+@article{shap_dependence_plot,
+  author    = {Scott M. Lundberg and
+               Gabriel G. Erion and
+               Hugh Chen and
+               Alex DeGrave and
+               Jordan M. Prutkin and
+               Bala Nair and
+               Ronit Katz and
+               Jonathan Himmelfarb and
+               Nisha Bansal and
+               Su{-}In Lee},
+  title     = {Explainable {AI} for Trees: From Local Explanations to Global Understanding},
+  journal   = {CoRR},
+  volume    = {abs/1905.04610},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1905.04610},
+  archivePrefix = {arXiv},
+  eprint    = {1905.04610},
+  timestamp = {Tue, 28 May 2019 12:48:08 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1905-04610.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 
 
 
